[tool.poetry]
name = "Vibhakar"
version = "0.1.0"
description = "A python package that give you Info about me"
authors = ["p0lygun <solankivibhakar82@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
